--- a/package.json
+++ b/package.json
@@ -13,10 +13,11 @@
   "license": "ISC",
   "dependencies": {
     "@react-google-maps/api": "^2.19.2",
+    "dotenv": "^16.3.1",
     "process": "^0.11.10",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "dotenv": "^16.3.1"
+    "react-places-autocomplete": "^7.3.0"
   },
   "devDependencies": {
     "@babel/core": "^7.23.2",
